tests/specs/serve/type_check2/main.out
Check [WILDCARD]
error: TS2339 [ERROR]: Property 'doesnt_exist' does not exist on type 'Request'.
    console.log(request.doesnt_exist);
                        ~~~~~~~~~~~~
    at [WILDCARD]main.ts:3:25
